<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut_scan"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_scan"
        android:shortcutShortLabel="@string/shortcut_scan_short"
        android:shortcutLongLabel="@string/shortcut_scan_long">
        <intent
            android:action="com.scanflow.qr.action.SCAN"
            android:targetPackage="com.scanflow.qr"
            android:targetClass="com.scanflow.qr.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_create"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_create"
        android:shortcutShortLabel="@string/shortcut_create_short"
        android:shortcutLongLabel="@string/shortcut_create_long">
        <intent
            android:action="com.scanflow.qr.action.CREATE"
            android:targetPackage="com.scanflow.qr"
            android:targetClass="com.scanflow.qr.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_history"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_history"
        android:shortcutShortLabel="@string/shortcut_history_short"
        android:shortcutLongLabel="@string/shortcut_history_long">
        <intent
            android:action="com.scanflow.qr.action.HISTORY"
            android:targetPackage="com.scanflow.qr"
            android:targetClass="com.scanflow.qr.MainActivity" />
    </shortcut>
</shortcuts>
